Fix iOS text wrap bug
Why these changes are being introduced:

SwiftUI/iOS has some unusual behavior for list markers. It adds
line height to them, such that when we increase the font size
for a marker, the line height is dramatically increased. This
is particularly visible when the text next to the marker wraps,
which is common for TIMDEX UI record titles.

Relevant ticket(s):

* [GDT-246](https://mitlibraries.atlassian.net/browse/GDT-246)

How this addresses that need:

This implements a CSS workaround. First, we reset the line height
to 0 on `.result`, enforcing no line height for markers. Then,
we add a div to wrap the rest of the result (`.result-content`),
with a rule that sets the line height to 1.2.

Side effects of this change:

I don't forsee any, but it's a pretty ugly workaround to accommodate
a minor bug in a weird OS.

--- a/app/assets/stylesheets/partials/_results.scss
+++ b/app/assets/stylesheets/partials/_results.scss
@@ -44,16 +44,11 @@
   padding: 2rem;
   border-top: 1px solid $brand-primary;
   font-size: $fs-small;
+  line-height: 0; /* line height needs to be reset so iOS doesn't act weird */
 
   &::marker {
     font-size: 2.5rem;
-    line-height: 1.1;
     font-weight: $fw-bold;
-  }
-
-  .record-title {
-    font-size: 2.5rem;
-    line-height: 1.1;
   }
 
   &:hover,
@@ -61,29 +56,38 @@
     background-color: $gray-l4;
   }
 
-  a:visited {
-    color: $brand-secondary;
-  }
+  .result-content {
+    line-height: 1.2;
 
-  .pub-info {
-    font-size: $fs-base;
-    color:  $gray-d1;
-    span:first-child:after {
-      content: " | ";
+    .record-title {
+      font-size: 2.5rem;
+      line-height: 1.1;
     }
-    margin: 1em 0;
-  }
 
-  .result-summary {
-    margin-bottom: 2.4em;
-  }
+    a:visited {
+      color: $brand-secondary;
+    }
 
-  .result-highlights {
-    margin-top: 1.4em;
-    ul {
-      list-style: none;
-      li {
-        margin-left: 2rem;
+    .pub-info {
+      font-size: $fs-base;
+      color:  $gray-d1;
+      span:first-child:after {
+        content: " | ";
+      }
+      margin: 1em 0;
+    }
+
+    .result-summary {
+      margin-bottom: 2.4em;
+    }
+
+    .result-highlights {
+      margin-top: 1.4em;
+      ul {
+        list-style: none;
+        li {
+          margin-left: 2rem;
+        }
       }
     }
   }
